# galaksio

./: OPENX402_JSON_FLOW.md  README.md  REFACTORING_SUMMARY.md
backend/: .gitignore  Dockerfile  Dockerfile.broker  Dockerfile.executor  Dockerfile.quote  README.md  broker.akash.yaml  docker-compose.yaml  quote.akash.yaml
backend/broker/: README.md  package-lock.json
backend/docs/: CLIENT_INTEGRATION.md  DOCKER_README.md  REFACTORING_PLAN.md  SUMMARY.md
backend/executor/: README.md  package-lock.json
backend/quote/: GALAKSIO_STORAGE_INTEGRATION.md  example_galaksio_storage.py  main.py  pyproject.toml  test_galaksio_storage.py
broker/: API_DOCUMENTATION.md  package-lock.json  package.json  tsconfig.json
broker/src/: index.ts  swagger.ts  testClient.ts  types.ts
cli/: .env.example  .gitignore  README.md  hello_galaksio.py  pyproject.toml
cli/galaksio_cli/: __init__.py  cli.py
examples/: simple-upload.js  simple-upload.py
executor/: .env.example  TESTING.md  package.json  test-client.ts
executor/src/: index.ts  types.ts
frontend/: .gitignore  BROKER_API_INTEGRATION.md  BROKER_API_QUICK_REF.md  BROKER_INTEGRATION_SUMMARY.md  CAMBIOS.md  CANONICAL_INTEGRATION_FLOW.md  COMPUTE_INTEGRATION.md  GALAKSIO_AUDIT_V1.0_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  SETUP.md  STORAGE_INTEGRATION.md  check-job.mjs  next.config.ts  package-lock.json  package.json
frontend/docs/: AGENT_PROMPT.md  DEVELOPMENT.md
frontend/src/: proxy.ts
quote/: main.py
quote/api/: main.py
quote/galaksio/: arweave.py  constants.py  openx402.py  (+2 more)
(+96 files in other folders)
